    + Possiilité de cacher la boîte de message pour le temps d'une session
    + Le bouton 'fermer' de l'importation des logs ne s'affiche maintenant qu'à la fin du chargement des fichiers logs ET powers et non lorsque l'un des deux est terminé
    + Correction de l'enregistrement de la version du firmware
    + Ajout de la mise à jour de l'id dans le fichier de configuration de la Cultibox

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Mar 23 13:48:54 CET 2014


Cultibox (1.3.04) precise; urgency=low
    + Ajout du menu wifi et des pages associées
    + Ajout du traitement des données XML pour la page wifi
    + Ajout de la possibilité de créer des programmes définit avec une prise variateur
    + Ajout d'un champ IP permettant la configuration du module Wifi

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Feb 12 20:28:12 CET 2014


Cultibox (1.3.03) precise; urgency=low
    + Optimisation de la lecture/ecriture des fichiers
    + Ajout d'une biblothèque de débug
    + Correction de la création du fichier de configuration du wifi
    + Correction des sauts de lignes dans les fichiers calc_XX

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Feb 8  17:52:12 CET 2014


Cultibox (1.3.02) precise; urgency=low
    + Ajout d'un vérification d'écriture sur la carte SD avant le formatage
    + Ajout d'un menu de configuration wifi
    + Correction des caractères \n dans le calendrier et le fichier index

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Feb  4 13:31:07 CET 2014


Cultibox (1.3.01) precise; urgency=low
    + Ajout d'une table de type de capteur
    + Mise à jour de la table type de capteur par le fichier index
    + Optimisation du chargement des logs par la lecture en un coup des fichiers et l'optimisation du parcours du fichier index

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Feb  4 10:31:07 CET 2014


Cultibox (1.2.12) precise; urgency=low
    + Plus de limites de caractères pour les fichiers cal_XX