@@ -11,6 +11,7 @@ Cultibox (1.3.05) precise; urgency=low
     + Le bouton 'fermer' de l'importation des logs ne s'affiche maintenant qu'à la fin du chargement des fichiers logs ET powers et non lorsque l'un des deux est terminé
     + Correction de l'enregistrement de la version du firmware
     + Ajout de la mise à jour de l'id dans le fichier de configuration de la Cultibox
+    + Optimisation du chargement des logs power
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Sun Mar 23 13:48:54 CET 2014
 
